hphp/test/slow/unsafe_cast_erased_fnptr.php.expectf
Fatal error: Failure to resolve undefined function unsafe_cast() in %s/test/slow/unsafe_cast_erased_fnptr.php on line 7
